fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -207,9 +207,9 @@ header .logo
 .flexbox-container {
   z-index: 2;
   height: 500px;
-  width: 2000px;
+  width: 2500px;
   display: flex;  
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
  
 }
